--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -39,3 +39,9 @@ body{
 li{
     list-style-type: disc;
 }
+
+@media screen and (max-width: 600px) {
+    .disappear {
+      display: none;
+    }
+  }
